--- a/core/templates/core/ana_sayfa.html
+++ b/core/templates/core/ana_sayfa.html
@@ -34,7 +34,7 @@
   <!-- Giriş yazısı -->
   <section>
     <div class="container px-5 mt-3">
-      <p>
+      <p class="text-center">
         Panik atak konusunda binlerce kişiye tedavi yolunu göstermiş
         <strong>Dr. Ofelya Cabral</strong>, doktorluğunu kendi muayenehanesinde
         devam ettirmektedir. Bunun yanında anksiyete / endişe-kaygı bozukluğu,
@@ -59,8 +59,8 @@
               />
             </div>
           </div>
-          <h2 class="h4 fw-bolder">Online Panik Atak Programı</h2>
-          <p>
+          <h2 class="h4 fw-bolder text-center">Online Panik Atak Programı</h2>
+          <p class="text-center">
             Teşhis için önce Dr. Ofelya Cabral ile birebir, online ön görüşme
             yapılır. Daha sonrasında 6 saat süren, canlı panik atak eğitim
             programına katılınır. Hastamızın, bu eğitim sonrasında her gün
@@ -80,8 +80,8 @@
               />
             </div>
           </div>
-          <h2 class="h4 fw-bolder">Yüz yüze Terapi</h2>
-          <p>
+          <h2 class="h4 fw-bolder text-center">Yüz yüze Terapi</h2>
+          <p class="text-center">
             Ankara’daki muayenehanesinde Dr. Ofelya Cabral, kişinin
             rahatsızlığının durumuna göre; ortalama 3-6 seans arasında süren,
             kendi çalıştığı konular hakkında uyguladığı tedavileri, birebir ve
@@ -101,8 +101,8 @@
               />
             </div>
           </div>
-          <h2 class="h4 fw-bolder">Online Terapi</h2>
-          <p>
+          <h2 class="h4 fw-bolder text-center">Online Terapi</h2>
+          <p class="text-center">
             Bireysel terapilerdeki sürecin aynısı online olarak, Ofelya hanımla
             birebir, görüntülü bir şekilde yapılır. Seans sonrasında verdiğimiz
             dinletiler e-posta aracılığıyla gönderilir. Bu telkin dinletilerini
@@ -119,8 +119,8 @@
 
   <!-- Tedaviler / Treatments-->
   <section class="bg-light">
-    <div class="container my-5">
-      <div class="row gx-5 justify-content-center">
+    <div class="container">
+      <div class="row justify-content-center">
         <!-- Tedavi Listesi-->
         <div class="col-lg-6 col-xl-4">
           <div class="card">
