--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -96,8 +96,8 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'dinletiler' %}">Dinletiler</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Hakkında</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">İletişim</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'hakkinda' %}">Hakkında</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'iletisim' %}">İletişim</a></li>
           </ul>
         </div>
       </div>
