--- a/core/templates/core/dinletiler.html
+++ b/core/templates/core/dinletiler.html
@@ -1,60 +1,88 @@
-{% extends 'core/base.html' %}
-{% block content %}
+{% extends 'core/base.html' %} {% block content %}
 <div class="container mb-5 my-5">
-    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1557616753&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe>
-    <div
-        style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-        <a href="https://soundcloud.com/ofelya-990357288" title="Ofelya Cabral" target="_blank"
-            style="color: #cccccc; text-decoration: none;">Ofelya Cabral</a> · <a
-            href="https://soundcloud.com/ofelya-990357288/sets/telkin-dinletileri" title="Telkin Dinletileri"
-            target="_blank" style="color: #cccccc; text-decoration: none;">Telkin Dinletileri</a>
-    </div>
+  <iframe
+    width="100%"
+    height="450"
+    scrolling="no"
+    frameborder="no"
+    allow="autoplay"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1557616753&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"
+  ></iframe>
+  <div
+    style="
+      font-size: 10px;
+      color: #cccccc;
+      line-break: anywhere;
+      word-break: normal;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans,
+        Garuda, Verdana, Tahoma, sans-serif;
+      font-weight: 100;
+    "
+  >
+    <a
+      href="https://soundcloud.com/ofelya-990357288"
+      title="Ofelya Cabral"
+      target="_blank"
+      style="color: #cccccc; text-decoration: none"
+      >Ofelya Cabral</a
+    >
+    ·
+    <a
+      href="https://soundcloud.com/ofelya-990357288/sets/telkin-dinletileri"
+      title="Telkin Dinletileri"
+      target="_blank"
+      style="color: #cccccc; text-decoration: none"
+      >Telkin Dinletileri</a
+    >
+  </div>
 
-    <h2>Ön Bilgiler</h2>
-    <p>
-        Dinletilerin yayını kalıcıdır.
-
-        Dr. Ofelya Cabral’ın Türkiye’de, 2005 yılında bir ilk olarak yaptığı ve birçok konu hakkında kaydedilmiş telkin
-        dinletilerinin listesi yukarıdadır.
-
-        Dinletiler tedavinin yerine geçmez. Aldığınız tedavi sürecinize takviye olarak kullanılır. Bunun yanında kendi
-        yaptığınız bir stres yönetim sürecine ek uygulama olarak da kullanılır.
-
-        Konunuza uygun olan bir dinletiyi veya birkaç dinletiyi 21 gün boyunca her gün dinleyebilirsiniz.
-
-        Dinletilerden eğer birden fazlasını dinlemeniz gerekiyorsa, mesela Endişeye Son, Güle Güle Stres ve Güle Güle
-        Olumsuz Düşünceyi -yani üç tanesini- dinlemeniz durumunda, her gün bir tanesini dinliyoruz. Hangi sırayla
-        dinlediğiniz önemli değil ama örnek vermek açısından yazmak gerekirse:
-
-        Birinci gün: Endişeye Son
-        İkinci gün: Güle Güle Stres
-        Üçüncü gün: Güle Güle Olumsuz Düşünce
-        Dördüncü gün: yine ilk dinletiyi, yani en başa dönerek Endişeye Son’u dinlememiz gerekiyor. Daha sonrasında ise
-        yine aynı sırayı takip edip dönüşümlü uyguluyoruz.
-
-        Her gün değiştire değiştire bir tanesini dinliyoruz ve bu süreç yine toplamda en az 21 gün olması gerekiyor.
-    </p>
-    <h2>Sıkça Sorulan Sorular</h2>
-    <ul class="faq-list">
-        <li class="card">
-            <span class="question">Bir günde kaç defa dinleti dinleyebilirim?</span>
-            <br>
-            <span class="answer">
-                Günde bir veya iki dinleti dinlemeniz önerilir. Öte yandan iki defadan fazla dinleti dinleyeceğimize
-                zamanımızı, süreç boyunca diğer stres yönetimi tekniklerini de ayırabiliriz. Örneğin nefes egzersizi,
-                yürüyüş, hobi vb.</span>
-        </li>
-        <li>
-            <span class="question">Dinlerken uyuya kaldım, herhangi bir sorun olur mu?</span>
-            <br>
-            <span class="answer">
-                Dinletileri dinlerken uyuya kalmamızda herhangi bir sorun yoktur. Zaten dinletilerin temel amacı
-                vücudumuzdaki stres seviyesini düşürmektir ve uyuya kaldığımızdaysa stres seviyemizin genel olarak
-                düştüğü anlamına gelebilir. Dolayısıyla uyuya kalmak hem iyidir hem de dinletileri dinlerken herhangi
-                bir sorun oluşturmaz.</span>
-        </li>
-    </ul>
-
+  <h2>Ön Bilgiler</h2>
+  <p>
+    Dinletilerin yayını kalıcıdır. Dr. Ofelya Cabral’ın Türkiye’de, 2005 yılında
+    bir ilk olarak yaptığı ve birçok konu hakkında kaydedilmiş telkin
+    dinletilerinin listesi yukarıdadır. Dinletiler tedavinin yerine geçmez.
+    Aldığınız tedavi sürecinize takviye olarak kullanılır. Bunun yanında kendi
+    yaptığınız bir stres yönetim sürecine ek uygulama olarak da kullanılır.
+    Konunuza uygun olan bir dinletiyi veya birkaç dinletiyi 21 gün boyunca her
+    gün dinleyebilirsiniz. Dinletilerden eğer birden fazlasını dinlemeniz
+    gerekiyorsa, mesela Endişeye Son, Güle Güle Stres ve Güle Güle Olumsuz
+    Düşünceyi -yani üç tanesini- dinlemeniz durumunda, her gün bir tanesini
+    dinliyoruz. Hangi sırayla dinlediğiniz önemli değil ama örnek vermek
+    açısından yazmak gerekirse: Birinci gün: Endişeye Son İkinci gün: Güle Güle
+    Stres Üçüncü gün: Güle Güle Olumsuz Düşünce Dördüncü gün: yine ilk
+    dinletiyi, yani en başa dönerek Endişeye Son’u dinlememiz gerekiyor. Daha
+    sonrasında ise yine aynı sırayı takip edip dönüşümlü uyguluyoruz. Her gün
+    değiştire değiştire bir tanesini dinliyoruz ve bu süreç yine toplamda en az
+    21 gün olması gerekiyor.
+  </p>
+  <h2>Sıkça Sorulan Sorular</h2>
+  <ul class="faq-list">
+    <li class="card">
+      <span class="question">Bir günde kaç defa dinleti dinleyebilirim?</span>
+      <br />
+      <span class="answer">
+        Günde bir veya iki dinleti dinlemeniz önerilir. Öte yandan iki defadan
+        fazla dinleti dinleyeceğimize zamanımızı, süreç boyunca diğer stres
+        yönetimi tekniklerini de ayırabiliriz. Örneğin nefes egzersizi, yürüyüş,
+        hobi vb.</span
+      >
+    </li>
+    <li>
+      <span class="question"
+        >Dinlerken uyuya kaldım, herhangi bir sorun olur mu?</span
+      >
+      <br />
+      <span class="answer">
+        Dinletileri dinlerken uyuya kalmamızda herhangi bir sorun yoktur. Zaten
+        dinletilerin temel amacı vücudumuzdaki stres seviyesini düşürmektir ve
+        uyuya kaldığımızdaysa stres seviyemizin genel olarak düştüğü anlamına
+        gelebilir. Dolayısıyla uyuya kalmak hem iyidir hem de dinletileri
+        dinlerken herhangi bir sorun oluşturmaz.</span
+      >
+    </li>
+  </ul>
 </div>
 {% endblock %}
