--- a/core/templates/core/panik-atak.html
+++ b/core/templates/core/panik-atak.html
@@ -2,7 +2,7 @@
 {% load static %}
 <!-- Youtube Embed Bölümü-->
 <header>
-  <div class="container-fluid text-center bg-dark">
+  <div class="container-fluid d-flex justify-content-center flex-wrap bg-dark">
     <iframe
       width="359"
       height="638"
@@ -40,7 +40,7 @@
   <!-- Adım Adım Tedavi Süreci -->
   <section class="card m-3 py-3 border-bottom" id="features">
     <div class="text-center my-1">
-      <h2>Adım Adım Program Süreci</h2>
+      <h2 class="text-center">Adım Adım Program Süreci</h2>
     </div>
     <div class="container-fluid px-3 my-3">
       <div class="row gx-5">
@@ -53,8 +53,8 @@
               />
             </div>
           </div>
-          <h2 class="h4 fw-bolder">1- Online Ön Görüşme</h2>
-          <p>
+          <h2 class="h4 fw-bolder text-center">1- Online Ön Görüşme</h2>
+          <p class="text-center">
             Katılmak isteyenlerin, teşhislerini yapmak ve programın hastaya
             uygun olup olmadığını anlamak amacıyla Dr. Ofelya Cabral birebir
             online ön görüşme yapıyor.
@@ -69,7 +69,7 @@
               />
             </div>
           </div>
-          <h2 class="h4 fw-bolder">2- Online Canlı Eğitim Semineri</h2>
+          <h2 class="h4 fw-bolder text-center">2- Online Canlı Eğitim Semineri</h2>
           <p>
             Ön görüşme sonrasında ufak gruplarla yapılan ve bir gün (6 saat)
             süren panik atak eğitim seminerlerimiz, Dr. Ofelya Cabral ve bu
@@ -85,8 +85,8 @@
               />
             </div>
           </div>
-          <h2 class="h4 fw-bolder">3- 21 Günlük Set Program</h2>
-          <p>
+          <h2 class="h4 fw-bolder text-center">3- 21 Günlük Set Program</h2>
+          <p class="text-center">
             Eğitim sonrasında gündelik hayatına devam eden hastamız, set
             programı ile desteklediğimiz ve her gün ortalama bir saat ayıracağı
             21 günlük bilinçaltı tedavi programını uyguluyor ve bu süre içinde
@@ -102,8 +102,8 @@
               />
             </div>
           </div>
-          <h2 class="h4 fw-bolder">4- Takip Seansı</h2>
-          <p>
+          <h2 class="h4 fw-bolder text-center">4- Takip Seansı</h2>
+          <p class="text-center">
             21 günlük tedavi programı sonrasında Ofelya hanım ile birebir 1 tane
             online veya yüz yüze takip seansı yapılıyor. Buradaki amaç son durum
             değerlendirmesi yapmak ve hasta üzerinde karar vermektir.
@@ -497,18 +497,18 @@
   </section>
 
   <!-- Sayaç Bölümü -->
-  <div class="container col-lg d-flex justify-content-center my-5 text-center">
-    <div class="row-lg mx-4">
+  <div class="container col-lg d-flex justify-content-around flex-wrap my-5 text-center">
+    <div class="row-lg">
       <span class="counter display-counter" data-max="17">0</span
       ><span class="display-counter">+</span>
       <p class="display-counter-text">YILDIR DEVAM EDEN TECRÜBE</p>
     </div>
-    <div class="row-lg mx-4">
+    <div class="row-lg">
       <span class="counter display-counter" data-max="750">0</span
       ><span class="display-counter">+</span>
       <p class="display-counter-text">DEFA DÜZENLENEN SEMİNER</p>
     </div>
-    <div class="row-lg mx-4">
+    <div class="row-lg">
       <span class="counter display-counter" data-max="6000">0</span
       ><span class="display-counter">+</span>
       <p class="display-counter-text">PANİK ATAK KATILAN</p>
