--- a/core/templates/core/panik-atak.html
+++ b/core/templates/core/panik-atak.html
@@ -70,7 +70,7 @@
             </div>
           </div>
           <h2 class="h4 fw-bolder text-center">2- Online Canlı Eğitim Semineri</h2>
-          <p>
+          <p class="text-center">
             Ön görüşme sonrasında ufak gruplarla yapılan ve bir gün (6 saat)
             süren panik atak eğitim seminerlerimiz, Dr. Ofelya Cabral ve bu
             konuda 9 yıl tecrübeye sahip olan ekibiyle beraber yapılıyor.
