--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,28 +25,25 @@
     <link rel="stylesheet" href="{% static 'core/css/main.css' %}" />
 
     {% block head %}{% endblock %}
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
     <!-- Top navigasyon barı-->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container px-3">
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container px-5">
         <a href="#" class="nav-link"
           >Gaziosmanpaşa Uğur Mumcu Cadddesi 94/6 Çankaya/Ankara</a
         >
       </div>
     </nav>
     <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark py-2">
+    <nav
+      class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary-pg py-2"
+    >
       <div class="container px-5">
-        <a class="navbar-brand" href="{% url 'ana-sayfa' %}">Dr. Ofelya Cabral</a>
+        <a class="navbar-brand" href="{% url 'ana-sayfa' %}"
+          >Dr. Ofelya Cabral</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -61,7 +58,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'ana-sayfa' %}"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="{% url 'ana-sayfa' %}"
                 >Ana Sayfa</a
               >
             </li>
@@ -74,21 +74,45 @@
                 >Tedaviler</a
               >
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'panik-atak' %}">Panik Atak</a></li>
-                <li><a class="dropdown-item" href="{% url 'anksiyete' %}">Anksiyete</a></li>
-                <li><a class="dropdown-item" href="{% url 'depresyon' %}">Depresyon</a></li>
                 <li>
-                  <a class="dropdown-item" href="{% url 'ofke-kontrol-bozukluk' %}">Öfke Kontrol Bozukluğu</a>
+                  <a class="dropdown-item" href="{% url 'panik-atak' %}"
+                    >Panik Atak</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="{% url 'iliski-cift-terapisi' %}">İlişki/Çift Terapisi</a>
+                  <a class="dropdown-item" href="{% url 'anksiyete' %}"
+                    >Anksiyete</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'depresyon' %}"
+                    >Depresyon</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="{% url 'ofke-kontrol-bozukluk' %}"
+                    >Öfke Kontrol Bozukluğu</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="{% url 'iliski-cift-terapisi' %}"
+                    >İlişki/Çift Terapisi</a
+                  >
                 </li>
                 <li>
                   <a class="dropdown-item" href="{% url 'takintili-dusunce' %}"
                     >Takıntılı Düşünceler</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="{% url 'sosyal-fobi' %}">Sosyal Fobi</a></li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'sosyal-fobi' %}"
+                    >Sosyal Fobi</a
+                  >
+                </li>
               </ul>
             </li>
 
@@ -96,19 +120,22 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'dinletiler' %}">Dinletiler</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'hakkinda' %}">Hakkında</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'iletisim' %}">İletişim</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'hakkinda' %}">Hakkında</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'iletisim' %}">İletişim</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- Flash Mesajları -->
-    
-    
+
     <!-- Header-->
     {% block content %}{% endblock %}
     <!-- Footer-->
-    <footer class="py-3 bg-dark">
+    <footer class="py-3 bg-primary-pg">
       <div class="container px-2">
         <p class="m-0 text-center text-white">
           Copyright &copy; 2023 DR. OFELYA CABRAL - Bu site sağlık hizmeti
@@ -139,7 +166,7 @@
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
     <script
       src="//code.tidio.co/kkj09m5amrvvjvazruasvt5qrl7y3nai.js"
       async
