--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,128 +16,128 @@
     {% endif %}
 
     <!-- Core CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="{% static 'core/css/main.css' %}" />
 
     {% block head %}{% endblock %}
   </head>
+  <header>
+    <nav class="navbar">
+      <a href="{% url 'ana-sayfa' %}" class="navbar__logo">Dr. Ofelya Cabral</a>
+      <div class="navbar-desktop">
+        <ul class="navbar__list">
+          <li class="navbar__item">
+            <a href="{% url 'ana-sayfa' %}">Ana Sayfa</a>
+          </li>
+          <li class="navbar__item">
+            <a href="{% url 'ana-sayfa' %}">Yazılar</a>
+          </li>
+          <li class="navbar__item">
+            <div class="dropdown">
+              <button class="dropdown__button" href="{% url 'ana-sayfa' %}">
+                Tedaviler &#10550;
+              </button>
+              <div class="dropdown-content">
+                <ul class="dropdown__list">
+                  <li class="navbar__item">
+                    <a href="{% url 'panik-atak' %}">Panik Atak</a>
+                  </li>
+                  <li class="navbar__item">
+                    <a href="{% url 'anksiyete' %}">Anksiyete</a>
+                  </li>
+                  <li class="navbar__item">
+                    <a href="{% url 'depresyon' %}">Depresyon</a>
+                  </li>
+                  <li class="navbar__item">
+                    <a href="{% url 'sosyal-fobi' %}">Sosyal Fobi</a>
+                  </li>
+                  <li class="navbar__item">
+                    <a href="{% url 'ofke-kontrol-bozukluk' %}">Öfke Kontrol Bozukluğu</a>
+                  </li>
+                  <li class="navbar__item">
+                    <a href="{% url 'iliski-cift-terapisi' %}">İlişki ve Çift Terapisi</a>
+                  </li>
+                  <li class="navbar__item">
+                    <a href="{% url 'takintili-dusunce' %}">Takıntılı Düşünceler</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="navbar__item">
+            <a href="{% url 'hakkinda' %}">Hakkında</a>
+          </li>
+          <li class="navbar__item">
+            <a href="{% url 'iletisim' %}">İletişim</a>
+          </li>
+        </ul>
+      </div>
+      <div class="hamburger">
+        <button
+          type="button"
+          class="hamburger__btn"
+          href="#"
+          onclick="showMenu()"
+        >
+          <span class="hamburger__line" id="hamburger-line"></span>
+        </button>
+      </div>
+    </nav>
+    <div class="hamburger-menu" id="hamburger-menu">
+      <!-- Ana seçenekler -->
+      <ul class="hamburger__list">
+        <li class="navbar__item">
+          <a href="{% url 'ana-sayfa' %}">Ana Sayfa</a>
+        </li>
+        <!-- Tedaviler -->
+        <li class="navbar__item">
+          <button class="dropdown__button" type="button" onclick="showInnerMenu()">Tedaviler &#10550;</button>
+          <!-- Hamburger Dropdown -->
+          <div class="dropdown-hamburger" id="dropdown-hamburger">
+            <ul class="hamburger__list">
+              <li class="navbar__item">
+                <a href="{% url 'panik-atak' %}">Panik Atak</a>
+              </li>
+              <li class="navbar__item">
+                <a href="{% url 'anksiyete' %}">Anksiyete</a>
+              </li>
+              <li class="navbar__item">
+                <a href="{% url 'depresyon' %}">Depresyon</a>
+              </li>
+              <li class="navbar__item">
+                <a href="{% url 'sosyal-fobi' %}">Sosyal Fobi</a>
+              </li>
+              <li class="navbar__item">
+                <a href="{% url 'ofke-kontrol-bozukluk' %}">Öfke Kontrol Bozukluğu</a>
+              </li>
+              <li class="navbar__item">
+                <a href="{% url 'iliski-cift-terapisi' %}">İlişki ve Çift Terapisi</a>
+              </li>
+              <li class="navbar__item">
+                <a href="{% url 'takintili-dusunce' %}">Takıntılı Düşünceler</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+
+        <li class="navbar__item">
+          <a href="{% url 'hakkinda' %}">Hakkında</a>
+        </li>
+        <li class="navbar__item">
+          <a href="{% url 'iletisim' %}">İletişim</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
   <body>
-    <!-- Top navigasyon barı-->
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container px-5">
-        <a href="#" class="nav-link"
-          >Gaziosmanpaşa Uğur Mumcu Cadddesi 94/6 Çankaya/Ankara</a
-        >
-      </div>
-    </nav>
-    <!-- Responsive navbar-->
-    <nav
-      class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary-pg py-2"
-    >
-      <div class="container px-5">
-        <a class="navbar-brand" href="{% url 'ana-sayfa' %}"
-          >Dr. Ofelya Cabral</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="{% url 'ana-sayfa' %}"
-                >Ana Sayfa</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                role="button"
-                aria-expanded="false"
-                >Tedaviler</a
-              >
-              <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="{% url 'panik-atak' %}"
-                    >Panik Atak</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'anksiyete' %}"
-                    >Anksiyete</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'depresyon' %}"
-                    >Depresyon</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="{% url 'ofke-kontrol-bozukluk' %}"
-                    >Öfke Kontrol Bozukluğu</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="{% url 'iliski-cift-terapisi' %}"
-                    >İlişki/Çift Terapisi</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'takintili-dusunce' %}"
-                    >Takıntılı Düşünceler</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'sosyal-fobi' %}"
-                    >Sosyal Fobi</a
-                  >
-                </li>
-              </ul>
-            </li>
-
-            <li class="nav-item"><a class="nav-link" href="#">Yazılar</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'dinletiler' %}">Dinletiler</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'hakkinda' %}">Hakkında</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'iletisim' %}">İletişim</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <!-- Flash Mesajları -->
 
     <!-- Header-->
     {% block content %}{% endblock %}
     <!-- Footer-->
-    <footer class="py-3 bg-primary-pg">
-      <div class="container px-2">
-        <p class="m-0 text-center text-white">
+    <footer>
+      <div>
+        <p>
           Copyright &copy; 2023 DR. OFELYA CABRAL - Bu site sağlık hizmeti
           vermemektedir, kişileri bilgilendirmek ve site sahibi hakkında bilgi
           vermek amacı ile hazırlanmıştır. Sitedeki bilgiler hastalıkların tanı
@@ -148,25 +148,8 @@
         </p>
       </div>
     </footer>
-    <!-- Bootstrap core JS-->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"
-    ></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> -->
-    <!-- Core theme JS-->
     <script src="{% static 'core/js/script.js' %}"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
+    <!-- Tidio Scripts -->
     <script
       src="//code.tidio.co/kkj09m5amrvvjvazruasvt5qrl7y3nai.js"
       async
