--- a/core/templates/core/ana_sayfa.html
+++ b/core/templates/core/ana_sayfa.html
@@ -27,7 +27,7 @@
 </section>
 
 <!-- Hizmetler Kart -->
-<section class="container">
+<section>
   <!-- Hizmetler / Services-->
   <h2 class="page-title text-center">Psikolojik Rahatsızlık Tedavisi ve Online Terapi Hizmetlerimiz</h2>
   <div class="services-section">
