--- a/core/static/core/css/_footer.scss
+++ b/core/static/core/css/_footer.scss
@@ -1,82 +1,91 @@
 @import "variables";
 
 .footer {
-    background-color: $persian-green;
-    color: $font-white;
-    padding: 1rem;
+  background-color: $persian-green;
+  color: $font-white;
+  padding: 1rem;
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+
+  &-user {
+    background-color: $charcoal;
+  }
+
+  &__top {
     display: grid;
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
 
-    &-user {
-        background-color: $charcoal;
+    @media (min-width: $laptop) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: 1fr;
     }
+  }
 
-    &__top {
-        display: grid;
-        grid-template-rows: repeat(3, auto);
+  &__social-media {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 1rem;
+    padding: 1rem;
+    border-bottom: 0.0625rem solid $font-white;
 
-        @media (min-width: $laptop) {
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: 1fr;
-        }
+    @media (min-width: $laptop) {
+      border: 0;
     }
+  }
 
-    &__social-media {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: 1rem;
-        padding: 1rem;
-        border-bottom: 0.0625rem solid $font-white;
-
-        @media (min-width: $laptop) {
-            border: 0;
-        }
-    }
-
-    &__bottom {
-        margin: 1rem 0;
-    }
+  &__bottom {
+    margin: 1rem 0;
+  }
 }
 
 .address,
 .subscription-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0;
 }
 
 .facebook,
 .youtube,
 .instagram,
 .abone-icon {
-    width: 3rem;
-    height: 3rem;
+  width: 3rem;
+  height: 3rem;
 }
 
 .facebook {
-    background-image: url('../icons/facebook.svg');
+  background-image: url("../icons/facebook.svg");
 }
 
 .youtube {
-    background-image: url('../icons/youtube.svg');
+  background-image: url("../icons/youtube.svg");
 }
 
 .instagram {
-    background-image: url('../icons/instagram.svg');
+  background-image: url("../icons/instagram.svg");
 }
 
 .abone-icon {
-    background-image: url('../icons/abone-icon.svg');
+  background-image: url("../icons/abone-icon.svg");
 }
 
 .social-media-icon {
-    transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 
-    &:hover {
-        filter: brightness(0.6);
-    }
+  &:hover {
+    filter: brightness(0.6);
+  }
+}
 
+.phone-link {
+  color: $font-white; // İstediğiniz bir renk
+  text-decoration: none;
+
+  &:hover {
+    color: darken($font-white, 10%);
+    text-decoration: none;
+  }
 }
